# LibraryDatabase

./: CMakeCache.txt  CMakeList.txt  CMakeLists.txt  main.cpp  operations.cpp  operations.h  readme.md
