cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(LibraryDatabase VERSION 0.1)
find_package( Boost REQUIRED)
add_executable(LibraryDatabase main.cpp libs/Qic_database.h libs/Qic_database.cpp operations.h operations.cpp)
TARGET_LINK_LIBRARIES( LibraryDatabase LINK_PUBLIC ${Boost_LIBRARIES} )
